# solarops

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  PROJECT_PLAN.md  README.md  SPRINT_PLAN.md  docker-compose.yml
.github/workflows/: ci-failure-analyzer.yml  ci.yml
db/: schema.sql
mock-api/: Dockerfile  pyproject.toml
mock-api/app/: main.py  models.py
mock-api/app/routers/: plants.py
mock-api/data/: devices.json  plants.json
mock-api/tests/: test_plants.py
n8n/workflows/: w-reg.json  w2-asset-sync.json
notion/: schema.md
scripts/: analyze_ci_failure.py  requirements-analyzer.txt
tests/: conftest.py  test_analyze_ci_failure.py
