[project]
name = "solarops-mock-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.32.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
    "ruff==0.4.10",
]

[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
